--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="cover"></div>
       <span class="heart">♥♥♥♥♥</span>
       <p class="paper" id="mainMessage">
-        Ya pronto entraras a la U cariño, ve a disfrutarlo, siempre estaré para ti y para apoyarte amor de mi vida. Eres lo mejor que me ha pasado, disfruta este tiempo amor ❤️
+        Ya pronto entraras a la U cariño, ve a disfrutarlo, siempre estaré para ti y para apoyarte amor de mi vida. ❤️
       </p>
       <div class="letter"></div>
     </div>
